[project]
name = "omnipy"
version = "0.21.2"
description = "Omnipy is a type-driven Python library for data conversion, parsing and wrangling; tool and web service interoperability; and scalable dataflow orchestration"
readme = "docs/readme.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [{name="Sveinung Gundersen"}, {name="Joshua Baskaran"}, {name="Federico Bianchini"}, {name="Jeanne Chèneby"}, {name="Ahmed Ghanem"},{name="Pável Vázquez"}]
maintainers = [{name="Sveinung Gundersen"}]
keywords = ["data wrangling", "metadata", "workflows", "etl", "research data", "prefect", "pydantic", "FAIR", "ontologies", "JSON", "tabular", "type-driven", "orchestration", "data models", "universal"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Framework :: Pydantic", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Topic :: Software Development :: Libraries"]
packages = [{include = "omnipy", from = "src"}]
dependencies = [
"inflection (>=0.5.1,<0.6.0)",
"pandas (>=2.2)",
"prefect (>=2.13.2,<3)",
"typing-extensions (>=4.12.2,<5)",
"python-slugify (>=8.0.4,<9)",
"chardet (>=5.2.0,<6)",
"pathspec (>=0.12.1,<1)",
"devtools (>=0.12.2,<1)",
"objsize (>=0.7.0,<1)",
"humanize (>=4.9.0,<5)",
"pydantic[email] (<2)",
"griffe < 1",
"pydantic-core (>=2.24.2,<3)",
"aiohttp (>=3.10.6,<4)",
"aiohttp-retry (>=2.9.0,<3)",
"aiolimiter (>=1.1.0,<2)",
"rich (>=13.9.4,<14.0.0)",
"bitarray (>=3.0.0,<4.0.0)",
"pygments (>=2.19.1,<3.0.0)",
"ruamel-yaml (>=0.18.10,<0.19.0)",
"solara-ui (>=1.48.0,<2.0.0)",
"ipython (<8)",
"term-background (>=1.0.2,<2.0.0)",
"compact-json (>=1.8.1,<2.0.0)",
"cachebox (>=5.0.1,<6.0.0)",
"pyreadline (>=2.1,<3.0)",
"asyncpg (>=0.30)",
"numpy (>=2,<3)",
"simple-hexdump (>=0.0.1,<0.0.2)",
"pathvalidate (>=3.3.1,<4.0.0)",
"notebook (>=7.4.5,<8.0.0)",
]

[tool.poetry.group.dev.dependencies]
deepdiff = "^6.2.1"
pytest = "<8"
pytest-pycharm = "^0.7.0"
types-python-slugify = "^8.0.0.1"
pandas-stubs = ">=2.2"
pre-commit = "^3.8.0"
pytest-mypy-plugins = "^3.1.2"
mypy = ">=1.16,<1.17"
pytest-aiohttp = "^1.0.5"
pyright = "^1.1.389"
aiostream = "^0.7.0"
pytest-asyncio = "<1"
pytest-cases = "<4"
tuna = "^0.5.11"

[tool.poetry.group.docs.dependencies]
pymdown-extensions = "^10.0.1"
mkdocs = "^1.5.3"
mkdocstrings = {version = "<0.28.0", extras=["python"]}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-material = "^9.4.6"
mdx-truly-sane-lists = "^1.3"
markdown-callouts = "^0.4.0"
markdown-exec = {extras = ["ansi"], version = "^1.10.0"}

[project.urls]
source = "http://github.com/fairtracks/omnipy"
homepage = "https://fairtracks.net/fair/#fair-07-transformation"
documentation = "http://omnipy.readthedocs.io/"
releasenotes = "https://omnipy.readthedocs.io/en/latest/release_notes/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
"omnipy" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.yapf]
allow_split_before_dict_value = true
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
blank_line_before_nested_class_or_def = false
column_limit = 100
indent_dictionary_value = true
join_multiple_lines = true
split_all_comma_separated_values = false
split_all_top_level_comma_separated_values = true
split_before_expression_after_opening_paren = true
split_before_bitwise_operator = true
split_before_logical_operator = true
split_before_arithmetic_operator = true

[tool.isort]
profile = "google"
force_single_line = false
multi_line_output = 1
src_paths = ["src/omnipy", "tests"]
line_length = 100

[flows]
checkpointing = true

[tool.mypy]
# Adapted from https://quantlane.com/blog/type-checking-large-codebase/

# General

python_version = "3.10"
mypy_path = "src:tests"

ignore_missing_imports = true
follow_imports = "silent"

# Ensure full coverage
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#disallow_untyped_decorators = true
#check_untyped_defs = true

# Restrict dynamic typing
#disallow_any_generics = true
#disallow_subclassing_any = true
#warn_return_any = true

# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = false
show_error_codes = true

# Explicit is better than implicit
no_implicit_optional = true

# Others
warn_no_return = false
disable_error_code = ["empty-body"]
#show_column_numbers = true
error_summary = true
verbosity = 0
#no_implicit_reexport = true

#plugins = [
#  "pydantic.mypy"
#]

[[tool.mypy.overrides]]
module = "tests.*"
# pytest decorators are not typed
disallow_untyped_decorators = false

#[[tool.mypy.overrides]]
#module = "firstmodule.*"
#ignore_missing_imports = true
#follow_imports = 'silent'

#[tool.pydantic-mypy]
##init_forbid_extra = true
#init_typed = false
#warn_required_dynamic_aliases = true

[tool.pyright]
reportFunctionMemberAccess = 'warning'
reportUnusedExpression = 'none'

[tool.pytest.ini_options]
addopts = "--tb=native"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.poetry.plugins."pygments.styles"]
"omnipy-selenized-black" = "omnipy.data._display.styles.omnipy_selenized:OmnipySelenizedBlackStyle"
"omnipy-selenized-dark" = "omnipy.data._display.styles.omnipy_selenized:OmnipySelenizedDarkStyle"
"omnipy-selenized-light" = "omnipy.data._display.styles.omnipy_selenized:OmnipySelenizedLightStyle"
"omnipy-selenized-white" = "omnipy.data._display.styles.omnipy_selenized:OmnipySelenizedWhiteStyle"
